--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-dom": "19.2.0",
     "react-hot-toast": "^2.6.0",
     "react-redux": "^9.2.0",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
